--- a/opm/templates/changerecordinginterval/changeRecordingInterval.html
+++ b/opm/templates/changerecordinginterval/changeRecordingInterval.html
@@ -1,4 +1,4 @@
-{% extends "home/userHeaderFooter.html" %}
+{% extends "home/doctorHeaderFooter.html" %}
 {% load staticfiles%}
 
 {% block content %}
