--- a/opm/templates/createusers/createUser.html
+++ b/opm/templates/createusers/createUser.html
@@ -77,7 +77,14 @@
                           {% endfor %}
                       </div>
                   <div id="chooseDoctor">
+                      <label>Choose Doctor</label>
+                      <br>
                       {{ form.doctorid }}
+                      <br /><br /><br />
+
+                        <label>Choose Blood Type</label>
+                        <br />
+                          {{ form.bloodtype }}
                   </div>
                   </div>
                     <center>
