--- a/opm/templates/home/doctorBody.html
+++ b/opm/templates/home/doctorBody.html
@@ -1,4 +1,4 @@
-{% extends "home/userHeaderFooter.html" %}
+{% extends "home/doctorHeaderFooter.html" %}
 {% load staticfiles%}
 
 {% block content %}
@@ -20,157 +20,6 @@
 }
 
 </style>
-
-<script>var chart = AmCharts.makeChart("chartdiv2", {
-    "type": "serial",
-    "theme": "light",
-    "marginRight": 70,
-    "autoMarginOffset": 20,
-    "dataProvider": [{
-        "year": "1995",
-        "value": 0.177
-    }, {
-        "year": "1996",
-        "value": 0.104
-    }, {
-        "year": "1997",
-        "value": 0.255
-    }, {
-        "year": "1998",
-        "value": 0.21
-    }, {
-        "year": "1999",
-        "value": 0.065
-    }, {
-        "year": "2000",
-        "value": 0.11
-    }, {
-        "year": "2001",
-        "value": 0.172
-    }, {
-        "year": "2002",
-        "value": 0.462
-    }, {
-        "year": "2003",
-        "value": 0.47
-    }, {
-        "year": "2004",
-        "value": 0.445
-    }, {
-        "year": "2005",
-        "value": 0.47
-    }],
-    "balloon": {
-        "cornerRadius": 6
-    },
-    "valueAxes": [{
-        "axisAlpha": 0
-    }],
-    "graphs": [{
-        "balloonText": "[[category]]<br><b><span style='font-size:14px;'>[[value]] C</span></b>",
-        "bullet": "round",
-        "bulletSize": 6,
-        "connect": false,
-        "lineColor": "#b6d278",
-        "lineThickness": 2,
-        "negativeLineColor": "#487dac",
-        "valueField": "value"
-    }],
-    "chartCursor": {
-        "categoryBalloonDateFormat": "YYYY",
-        "cursorAlpha": 0.1,
-        "cursorColor": "#000000",
-        "fullWidth": true,
-        "graphBulletSize": 2
-    },
-    "chartScrollbar": {},
-    "dataDateFormat": "YYYY",
-    "categoryField": "year",
-    "categoryAxis": {
-        "minPeriod": "YYYY",
-        "parseDates": true,
-        "minorGridEnabled": true
-    },
-    "export": {
-        "enabled": true
-    }
-});
-
-var chart = AmCharts.makeChart("chartdiv", {
-    "type": "serial",
-    "theme": "light",
-    "marginRight": 70,
-    "autoMarginOffset": 20,
-    "dataProvider": [{
-        "year": "1995",
-        "value": 1
-    }, {
-        "year": "1996",
-        "value": 0.104
-    }, {
-        "year": "1997",
-        "value": 0.255
-    }, {
-        "year": "1998",
-        "value": 0.21
-    }, {
-        "year": "1999",
-        "value": 0.065
-    }, {
-        "year": "2000",
-        "value": 0.11
-    }, {
-        "year": "2001",
-        "value": 0.172
-    }, {
-        "year": "2002",
-        "value": 0.462
-    }, {
-        "year": "2003",
-        "value": 0.47
-    }, {
-        "year": "2004",
-        "value": 0.445
-    }, {
-        "year": "2005",
-        "value": 0.47
-    }],
-    "balloon": {
-        "cornerRadius": 6
-    },
-    "valueAxes": [{
-        "axisAlpha": 0
-    }],
-    "graphs": [{
-        "balloonText": "[[category]]<br><b><span style='font-size:14px;'>[[value]] C</span></b>",
-        "bullet": "round",
-        "bulletSize": 6,
-        "connect": false,
-        "lineColor": "#b6d278",
-        "lineThickness": 2,
-        "negativeLineColor": "#487dac",
-        "valueField": "value"
-    }],
-    "chartCursor": {
-        "categoryBalloonDateFormat": "YYYY",
-        "cursorAlpha": 0.1,
-        "cursorColor": "#000000",
-        "fullWidth": true,
-        "graphBulletSize": 2
-    },
-    "chartScrollbar": {},
-    "dataDateFormat": "YYYY",
-    "categoryField": "year",
-    "categoryAxis": {
-        "minPeriod": "YYYY",
-        "parseDates": true,
-        "minorGridEnabled": true
-    },
-    "export": {
-        "enabled": true
-    }
-});
-</script>
 
     <div class="row white">
 
@@ -221,90 +70,7 @@ var chart = AmCharts.makeChart("chartdiv", {
                 </div>
 
         </div>
-                    <!------------------------------------- ROW2- Guide on Knowing ------------------------------------------>
-
-            <div class="col s12 white">
-                <div class="row white">
-                    <div class="col s12 center white">
-                        <div class="section"></div>
-                        <div class="divider"></div>
-                        <h3 class="center" id="greeting">Current Vitals Recorded from Patients</h3>
-                        Date: <b>September 30, 2018</b> | 11:30 PM
-                <!-- Maglalagay ako ng realtime clock dito -->
-                        <div class="section"></div>
-
-                    <div class="row white" style="margin: 10px">
-                            <div class="col s12 white">
-
-                                {% if patient_list.count == 0%}
-                                    No patients
-                                {% else %}
-                                    {% for patient_device in patient_deivce_list %}
-                                        <div class="col s6 white">
-                                            <h5 class="center green lighten-3"><b>{{ patient_device.patient_patientid.userid.lastname }}, {{ patient_device.patient_patientid.userid.lastname }}</b></h5>
-                                            <h6 class="center green lighten-4">ECG</h6>
-                                            <div id="chartdiv"></div>
-                                            <div class="col s6 center green lighten-4">
-                                                <h6 class="center">Temperature</h6>
-                                                {% for temperature in temperature_list %}
-                                                    {% if temperature.patientid.patient_patientid == patient_device.patient_patientid and temperature.deviceid.device_deviceid == patient_device.device_deviceid %}
-                                                        <h4 class="center">{{ temperature.data }}°C</h4>
-                                                    {% else %}
-                                                        <h4 class="center">0°C</h4>
-                                                    {% endif %}
-                                                {% endfor %}
-                                            </div>
-                                            <div class="col s6 center green lighten-5">
-                                                <h6 class="center">Heartrate</h6>
-                                                <h4 class="center">73 bpm</h4>
-                                            </div>
-                                            <a class="right btn-small waves-effect waves-light green lighten-2" href=""> View History of Vitals
-                                                <i class="material-icons left">person_outline</i>
-                                            </a>
-                                        </div>
-                                    {% endfor %}
-                                {% endif %}
-<!--
-                                <div class="col s6 white">
-                                    <h5 class="center green lighten-3"><b>Dela Cruz, Jhoana</b></h5>
-                                    <h6 class="center green lighten-4">ECG</h6>
-                                    <div id="chartdiv"></div>
-                                    <div class="col s6 center green lighten-4">
-                                        <h6 class="center">Temperature</h6>
-                                        <h4 class="center">37.9°C</h4>
-                                    </div>
-                                    <div class="col s6 center green lighten-5">
-                                        <h6 class="center">Heartrate</h6>
-                                        <h4 class="center">73 bpm</h4>
-                                    </div>
-                                    <a class="right btn-small waves-effect waves-light green lighten-2" href=""> View History of Vitals
-                                    <i class="material-icons left">person_outline</i>
-                                  </a>
-                                </div>
-                                <div class="col s6 center white">
-                                    <h5 class="green lighten-3"><b>Botabara, Tommy</b></h5>
-                                    <h6 class="center green lighten-4">ECG</h6>
-                                    <div id="chartdiv2"></div>
-                                    <div class="col s6 center green lighten-4">
-                                        <h6 class="center">Temperature</h6>
-                                        <h4 class="center">38°C</h4>
-                                    </div>
-                                    <div class="col s6 center green lighten-5">
-                                        <h6 class="center">Heartrate</h6>
-                                        <h4 class="center">81 bpm</h4>
-                                    </div>
-                                    <a class="right btn-small waves-effect waves-light green lighten-2" href=""> View History of Vitals
-                                    <i class="material-icons left">person_outline</i>
-                                  </a>
-                                </div>
-
-                            -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-    </div>
-
+    
 
 {% endblock %}
 
