--- a/opm/templates/restrictuseraccess/restrictUserAccess.html
+++ b/opm/templates/restrictuseraccess/restrictUserAccess.html
@@ -1,4 +1,4 @@
-{% extends "home/userHeaderFooter.html" %}
+{% extends "home/patientHeaderFooter.html" %}
 {% load staticfiles%}
 
 {% block content %}
