--- a/opm/templates/stoprecording/stopRecording.html
+++ b/opm/templates/stoprecording/stopRecording.html
@@ -1,4 +1,4 @@
-{% extends "home/userHeaderFooter.html" %}
+{% extends "home/doctorHeaderFooter.html" %}
 {% load staticfiles%}
 
 {% block content %}
@@ -8,64 +8,71 @@
 
             <div class="section"></div>
 
-            <h3 id="greeting"><i class="material-icons" style="font-size: 40px;">stop</i>&nbsp;&nbsp; Stop Recording</h3>
+            <h3 id="greeting"><i class="material-icons" style="font-size: 40px;">stop</i>&nbsp;&nbsp; Manage Device Recording</h3>
             <div class="section"></div>
             <div class="divider"></div>
             <div class="section"></div>
 
         </div>
-        <div class="col s12 m12 l12  white" style="padding: 0px 20px 0px 30px">
-            <div class="row">
+        <div id ="manageRecord" class="col s12 m12 l12  white" style="padding: 0px 20px 0px 30px">
+                <center>
+                    <label>Choose Patient</label>
+                      <select id="deviceID" class="browser-default" style="width: 35%;">
+                      {% if patient_device_list.count == 0 %}
+                          <option value="" disabled selected>No current patients is using a device</option>
+                      {% else %}
+                          {% for patientdevice in patient_device_list %}
+                            <option value="{{ patientdevice.device_deviceid.deviceid }}">{{ patientdevice.patient_patientid.userid.auth_user_id.first_name }} {{ patientdevice.patient_patientid.userid.auth_user_id.last_name }}</option>
+                          {% endfor %}
+                      {% endif %}
 
-                <div class="col s3"></div>
-                <div class = "col s3 center">
-                    <h5 class="">Enter Device ID</h5>
-                        <div class="input-field center">
-                        <input id="device_ID" type="text" class="validate">
-                        <label for="device_ID">Device ID</label>
-                        </div>
-                        <div class='row center'>
-                            <button id='deviceID' class='btn btn-small waves-effect'>Load</button>
-                        </div>
-
-                </div>
-
-                <div class="col s3 center">
-                    <h5 class="">Patient/s using the Device</h5>
-                    <script>
-                        $(document).ready(function(){
-                        $("#deviceID").click(function(){
-                        $("#device_ID").val("123");
-                        $("#namesofUser").append('<label><input type="checkbox" class="filled-in" checked="checked" /><span>Tommy Botabara</span>');
-                        event.preventDefault();
-                        });
-                    });
-                    </script>
-
-                    <p id="namesofUser"></p>
-
-                </div>
-                <div class="col s3"></div>
-
-            </div>
-
-            <div class="row">
-
-                <div class="col s3"></div>
-                <div class="col s6 center">
-
-                    <button id="stop" value="1" class="btn btn-large waves-effect red lighten-2" type="submit">Stop Recording</button>
-
-                </div>
-                <div class="col s3"></div>
-
-            </div>
+                    </select>
+                <br />
+                <br />
+                  {% if patient_device_list.count == 0 %}
+                      <button class="btn-large" id="stopresume" value=1 disabled>Stop Recording</button>
+                  {% else %}
+                      <button class="btn-large" id="stopresume" value=1>Stop Recording</button>
+                  {% endif %}
+                </center>
+            <br />
+            <br />
         </div>
         <section></section>
         <section></section>
         </div>
+
 
 <script>
+      $("#stopresume").click(function() {
+          var data = $(this).val();
+          var deviceid = $("#deviceID").val();
+        if ($(this).attr('value') == '1') {
+          $(this).html('Resume Recording');
+          $(this).val(0);
+        } else{
+          $(this).html('Stop Recording');
+          $(this).val(1);
+        }
+
+        $.ajax({
+        url: '{% url 'stop_recording' %}',
+        data: {
+          'deviceid': deviceid,
+          'data': data,
+        },
+        dataType: 'json',
+        success: function (data) {
+            for(let i = 0; i < data.length; i++){
+                console.log(data[i].response);
+                }
+            }
+        });
+
+      });
+
+
+
     $("#stop").click(function () {
         var deviceid = $(this).val();
 
